Fix spacings

--- a/src/client/style/molecules/m-mb-info.pcss
+++ b/src/client/style/molecules/m-mb-info.pcss
@@ -21,7 +21,7 @@
 
 @mixin screen-size xs {
   .m-mb-info {
-    padding-top: 0px;
+    padding-top: 0;
 
     .m-balloon-wrapper {
       position: static;
