--- a/src/client/style/molecules/m-topic-speaker.pcss
+++ b/src/client/style/molecules/m-topic-speaker.pcss
@@ -1,3 +1,7 @@
 .m-topic-speaker {
   padding: 0 5px;
+
+  > p:first-child {
+    margin-bottom: 5px;
+  }
 }
