--- a/src/client/style/organisms/o-event-topic.pcss
+++ b/src/client/style/organisms/o-event-topic.pcss
@@ -1,12 +1,12 @@
 .o-event-topic {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  padding: 30px 10px;
+  box-sizing: border-box;
 }
 
 @mixin screen-size xs {
   .o-event-topic {
-    width: 100%;
-    padding: 0 15px;
+    padding: 15px;
   }
 };
