--- a/src/client/style/organisms/o-topics-list.pcss
+++ b/src/client/style/organisms/o-topics-list.pcss
@@ -1,12 +1,17 @@
 .o-topics-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 auto;
-  max-width: 1025px;
 
   .o-event-topic {
     margin: 30px 0;
+    width: 33%;
   }
 }
 
+
+@mixin screen-size xs {
+  .o-topics-list .o-event-topic {
+    margin: 10px 0;
+    width: 100%;
+  }
+};
